<resources>
    <string name="app_name">Split</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="play_fragment_label">Play Fragment</string>
    <string name="credits_fragment_label">Credits Fragment</string>
    <string name="settings_fragment_label">Settings Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="creditsString">Credits</string>
    <string name="settingsString">Settings</string>
    <string name="titleString">Split</string>
    <string name="playString">Play</string>
    <string name="score">0</string>
    <string name="cardCount">Cards: 0</string>
    <string name="highScore">High Score: 0</string>
    <string name="backgrond_box">Backgrond Box</string>
    <string name="play_again">Play Again</string>
    <string name="main_menu">Main Menu</string>
    <string name="game_over">GAME OVER</string>
    <string name="second_wind">Second Wind</string>
    <string name="countdownText">3</string>
</resources>