<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.cards.CreditsFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_credits">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/SettingsFragment"
        android:name="com.example.cards.SettingsFragment"
        android:label="@string/settings_fragment_label"
        tools:layout="@layout/fragment_settings">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.cards.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_CreditsFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_SettingsFragment"
            app:destination="@id/SettingsFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_PlayFragment"
            app:destination="@id/PlayFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_PlayFragment2"
            app:destination="@id/PlayFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_SettingsFragment2"
            app:destination="@id/SettingsFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_PlayFragment3"
            app:destination="@id/PlayFragment" />
    </fragment>
    <fragment
        android:id="@+id/PlayFragment"
        android:name="com.example.cards.PlayFragment"
        android:label="@string/play_fragment_label"
        tools:layout="@layout/fragment_play">
        <action
            android:id="@+id/action_PlayFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
</navigation>